app/assets/stylesheets/revolution.css
/* ... */
.CRresponsespace {display:inline-block;background-color:#F9F9F9;border-radius: 6px; vertical-align: top; padding:9px; border:1px solid rgba(0, 0, 0, .1);font:bold 18px 'Muli', sans-serif;width:56.5%;}
.CRresponsespace textarea {display:block; margin:6px 12px 12px 12px; width:94%;}
.CRbuttonspace {margin-top:12px; }
.input input{background-color: #F9F9F9;}

#topsection { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position:relative; background-clip: padding-box; color:#333; background-color:white; margin-bottom:12px; }
.headerspace { text-shadow: 0 1px 0 white; padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; background-color: #FCFCFC;}
#carouselupdatespace {background-color: whitesmoke;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;padding: 16px 0 3px 12px; }
.inlinedisplay { list-style-type: none; position:relative; margin: 0; }
.inlinedisplay li{ display:inline; }

.explorecontainer{overflow: hidden;margin-left: auto;margin-right: auto;width: 706px;margin-top: 110px;}
.explorenewusercontent{background-color:white; overflow:hidden; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1); margin:12px; box-shadow: 0 0 30px 12px #888;}
.exploreheader{ margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
.exploreheader span{font: normal 21px 'Muli', sans-serif;}

.personatiles{ margin-top:18px;}

.challengetiles{ margin-top:18px; padding: 0 16px 36px 16px;}
.challengetiles .bar2 .mosaic-overlay, .aboutbody .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
.challengetiles .mosaic-block, .aboutbody .mosaic-block {width:130px; height:130px; margin-right:35px;}
.challengetiles .bigexploreimagespace{display:inline-block; vertical-align: top;}
.challengetiles .bigexploreimagespace img{width:120px; margin-right:10px}

.singleexploretile{display:inline-block; padding:0 25px 0 21px;}
.singleexploretile img{padding:6px 0 8px 0; max-width:none;}
.singleexploretile a{margin:2px; text-decoration:none;}
.singleexploretile a:hover img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px}
.singleexploretile .active img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px; background:whitesmoke;}
.exploretileimage img:focus{border-radius:4px; width:85px; }
.exploretiledetailsarea       { border: 1px solid rgba(0, 0, 0, .1); border-radius:10px; padding:10px; background-color:whitesmoke; margin:0 21px 11px 21px;}
.exploretiledetailsarea .bigexploreimagespace         { display:inline-block; vertical-align: top;}
.exploretiledetailsarea .bigexploreimagespace img     { align:left; width:120px; margin-right:10px}
.exploredetailsspace          { display:inline-block; width:480px;vertical-align: top;}
.exploredetailsspace button   { margin-top:10px}
.exploretextdetails h2        { font-size:23px; font-weight:bold; font-style:italic;}

/* modal close button*/
.exploreheader>.modal_close{ margin: -4px 9px 0 0; }
.modal_close { float:right; cursor:pointer;}
.modal_close img{ width:20px; }

.counter {display:block;float:left;font-size:2em;line-height:1.2em; -webkit-box-reflect: below -15px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), to(rgba(255,255,255,0.3)));}
.counter span.digit {background:#161616;background: #3F3F3F; /* Old browsers */background: linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -o-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -moz-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -webkit-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%);background: -ms-linear-gradient(bottom, #0A0A0A 0%, #2B2B2B 50%, #3F3F3F 100%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #0A0A0A), color-stop(0.5, #2B2B2B), color-stop(1, #3F3F3F)); filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF0A0A0A', endColorstr='#FF3F3F3F'); /* IE6 & IE7 */-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF0A0A0A', endColorstr='#FF3F3F3F')"; /* IE8 */zoom:1; background-clip:border; color:#FFF;display:block;float:left; height:44px;overflow:hidden; padding:0; position:relative;text-align:center;width:30px;}
.counter span.digit span {line-height:44px;position:relative;top:0;}
.counter span.digit hr {border-color: transparent;-webkit-box-shadow: inset 0 2px 1px  rgba(0,0,0,0.5);-moz-box-shadow: inset 0 2px 1px  rgba(0,0,0,0.5);box-shadow: inset 0 2px 1px   rgba(0,0,0,0.5);  height: 3px; margin: -2px 0 0 0;  position: absolute;top: 50%; width: 100%;z-index: 1;}
.counter span.separator {display:block;float:left; font-family:Georgia, serif; font-size:0.5em;position:relative; top:0.5em;}
.counter span.separator hr {display:none;}

body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif; line-height:18px; font-size:13px;}
.quizcontainer{overflow:hidden; width:768px;margin-left:auto;margin-right:auto;margin-top: 60px; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
#progressbar{width:632px; height: 40px; margin: 0 auto;}
.completionmessagespace{display:inline-block; width:396px;overflow: hidden; border-right:1px solid rgba(0, 0, 0, .1);}
.completionheader{ margin-left: 12px; }
.completionheader span{font:normal 29px 'Muli', sans-serif;}
.completionsubheader{margin-left:12px; font-size:16px}
.completionstats{margin:12px 12px 0 12px; font-size:13px; font-style: italic; border: 1px solid rgba(0, 0, 0, .1); padding: 6px 9px 0 9px; border-radius: 6px; background-color: #F9F9F9;}
.completionstats img{display:inline-block; width:40px; margin-left:6px; vertical-align: top; }
/* ... */

